--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,10 @@
 body{
-    background-color:blue;
+    background: linear-gradient(110deg, #2311c9 50%, #e7890e 50%);
+}
+h1{
+    text-align: center;
+}
+h2{
+    text-align: right;
+    font-size: 18px;
 }
