--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body{
-    background: linear-gradient(110deg, #2311c9 50%, #e7890e 50%);
+    background: linear-gradient(110deg, #8c309e 50%, #e7890e 50%);
 }
 h1{
     text-align: center;
